すべてのstrict-ruleに完全準拠

--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-functional": "^9.0.2",
     "eslint-plugin-prettier": "^5.2.2",
     "husky": "^9.1.7",
     "jsdom": "^27.3.0",
