--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@digital-go-jp/design-tokens": "^1.1.2",
     "@digital-go-jp/tailwind-theme-plugin": "^0.3.3",
     "@hono/zod-validator": "^0.7.5",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -44,11 +45,12 @@
     "clsx": "^2.1.1",
     "hono": "^4.10.8",
     "lucide-react": "^0.559.0",
-    "next": "16.0.8",
+    "next": "16.0.10",
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.5",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
     "vitest": "^4.0.15",
