--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vns-masakinihirota",
   "version": "0.3.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
