feat: 新しいサイドバーとルーティングシステムを導入し、ホーム、マッチング、ルートアカウント、プロフィールなどの主要ページを追加

--- a/src/config/routes.manifest.json
+++ b/src/config/routes.manifest.json
@@ -138,5 +138,19 @@
     "group": "footer",
     "order": 30,
     "visibleInMenu": true
+  },
+  {
+    "path": "/oasis",
+    "label": "オアシス宣言",
+    "group": "footer",
+    "order": 40,
+    "visibleInMenu": true
+  },
+  {
+    "path": "/human",
+    "label": "人間宣言",
+    "group": "footer",
+    "order": 50,
+    "visibleInMenu": true
   }
 ]
