--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
+    "@types/uuid": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "hono": "^4.10.8",
     "lucide-react": "^0.559.0",
     "next": "16.0.10",
@@ -54,6 +56,7 @@
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
+    "uuid": "^13.0.0",
     "vitest": "^4.0.15",
     "zod": "^4.1.13"
   },
