--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "lint:fast": "oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src",
     "format:fast": "oxfmt --write .",
     "typecheck:fast": "tsgo --noEmit",
-    "lint:fast:fix": "oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src --fix"
+    "lint:fast:fix": "oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src --fix",
+    "check:fast": "oxfmt --write . && oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src",
+    "fix:fast": "oxfmt --write . && oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src --fix"
   },
   "dependencies": {
     "@digital-go-jp/design-tokens": "^1.1.2",
@@ -91,6 +93,7 @@
     "prettier": "^3.4.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest-axe": "^0.1.0"
   }
 }
