--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "vitest": "^4.0.15",
