--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "react-simple-code-editor": "^0.14.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "use-debounce": "^10.1.0",
     "uuid": "^13.0.0",
     "vitest": "^4.0.15",
     "zod": "^4.1.13"
@@ -76,7 +78,6 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
-    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.49.0",
