--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vns-masakinihirota",
-  "version": "0.24.0",
+  "version": "0.25.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -62,6 +62,7 @@
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.5",
+    "phaser": "^3.90.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.68.0",
