chore: pre-merge checks, husky fix and updates

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vns-masakinihirota",
-  "version": "0.28.0",
+  "version": "0.28.2",
   "private": true,
   "type": "module",
   "scripts": {
@@ -9,23 +9,17 @@
     "start": "next start",
     "prepare": "husky",
     "supabase:types:local": "supabase gen types typescript --local > src/types/types_db.ts",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --check .",
-    "format:fix": "prettier --write .",
-    "check": "eslint . && prettier --check .",
-    "fix": "eslint . --fix && prettier --write .",
+    "lint": "oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src",
+    "lint:fix": "oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src --fix",
+    "format": "oxfmt --check .",
+    "format:fix": "oxfmt --write .",
+    "check": "oxfmt --write . && oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src",
+    "fix": "oxfmt --write . && oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src --fix",
     "typecheck": "pnpm exec tsc --noEmit -p .",
     "test": "vitest --run",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
-    "ci": "pnpm exec tsc --noEmit -p . && pnpm exec eslint . --max-warnings=0 && pnpm exec next build && pnpm test && pnpm audit --audit-level=moderate",
-    "lint:fast": "oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src",
-    "format:fast": "oxfmt --write .",
-    "typecheck:fast": "tsgo --noEmit",
-    "lint:fast:fix": "oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src --fix",
-    "check:fast": "oxfmt --write . && oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src",
-    "fix:fast": "oxfmt --write . && oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src --fix"
+    "ci": "pnpm exec tsc --noEmit -p . && pnpm exec eslint . --max-warnings=0 && pnpm exec next build && pnpm test && pnpm audit --audit-level=moderate"
   },
   "dependencies": {
     "@digital-go-jp/design-tokens": "^1.1.2",
@@ -88,15 +82,12 @@
     "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
-    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-functional": "^9.0.2",
-    "eslint-plugin-prettier": "^5.2.2",
     "husky": "^9.1.7",
     "jsdom": "^27.3.0",
     "oxfmt": "^0.20.0",
     "oxlint": "^1.35.0",
     "oxlint-tsgolint": "^0.10.0",
-    "prettier": "^3.4.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
