--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-icons": "^5.5.0",
     "react-simple-code-editor": "^0.14.1",
     "sonner": "^2.0.7",
+    "swr": "^2.4.0",
     "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.1.0",
     "uuid": "^13.0.0",
