--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,7 +23,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
   "include": [
@@ -32,5 +38,10 @@
     ".next/dev/types/**/*.ts",
     "node_modules/phaser/types"
   ],
-  "exclude": ["node_modules", ".next", "_trash"]
+  "exclude": [
+    "node_modules",
+    ".next",
+    "_trash",
+    "supabase"
+  ]
 }
