feat: Drizzle ORMとPostgreSQLを用いたデータベーススキーマの初期定義および関連するデータアクセス層とサーバーアクションを実装

--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "format:fix": "oxfmt --write .",
     "check": "oxfmt --write . && oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src",
     "fix": "oxfmt --write . && oxlint --tsconfig ./tsconfig.json --type-aware --type-check ./src --fix",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:generate:postgres": "drizzle-kit generate --config drizzle.config.postgres.ts",
+    "db:migrate:postgres": "drizzle-kit migrate --config drizzle.config.postgres.ts",
+    "db:push:postgres": "drizzle-kit push --config drizzle.config.postgres.ts",
     "typecheck": "pnpm exec tsc --noEmit -p .",
     "test": "vitest --run",
     "test:ui": "vitest --ui",
@@ -57,6 +64,8 @@
     "lucide-react": "^0.559.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "next-auth": "5.0.0-beta.25",
+    "@auth/drizzle-adapter": "^1.7.4",
     "nuqs": "^2.8.8",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
