--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@auth/drizzle-adapter": "^1.7.4",
     "@digital-go-jp/design-tokens": "^1.1.9",
     "@digital-go-jp/tailwind-theme-plugin": "^0.3.4",
+    "@google-cloud/vertexai": "^1.10.0",
     "@hono/zod-validator": "^0.7.6",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
