--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ next-env.d.ts
 # supabase
 supabase/signing_key.json
 
+# Temporary files and logs
+*_output.txt
+*_output_final.txt
+stash_diff.txt
+test_error.txt
+*.log
