--- a/package.json
+++ b/package.json
@@ -60,12 +60,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.3.1",
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^12.31.0",
     "hono": "^4.11.7",
     "lucide-react": "^0.559.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "postgres": "^3.4.8",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
